# PagePix

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  pdfium-win-x64.tgz  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: converter.rs  lib.rs  main.rs
src/components/: ConfirmDialog.tsx  DropZone.tsx  ImageLightbox.tsx  Logo.tsx  PageThumbnailGrid.tsx  ProgressBar.tsx  RecentConversions.tsx  TitleBar.tsx
src/hooks/: useRecentConversions.ts  useSettings.ts  useTheme.ts
src/types/: index.ts
src/views/: CompleteView.tsx  HomeView.tsx  ProcessingView.tsx  SettingsView.tsx
