[package]
name = "pagepix"
version = "0.1.2"
description = "PDF to Image Converter"
authors = ["you"]
edition = "2021"

[lib]
name = "pagepix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8"
image = "0.25"
base64 = "0.22"
dirs = "5"
